[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rs2nda"
version = "0.1.0"
description = "ReproSchema to NDA mapping tool"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0",
    "pandas>=1.0.0",
    "pyyaml>=5.1",
    "click>=7.0",
    "requests>=2.0.0",
    "sentence-transformers>=2.0.0",
    "langchain-community>=0.2.0",
    "langchain>=0.2.0",
    "langchain-ollama>=0.1.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["rs2nda"]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=1.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.scripts]
rs2nda = "rs2nda.cli:main"